--- a/src/main/resources/templates/fragments/menu-about.html
+++ b/src/main/resources/templates/fragments/menu-about.html
@@ -26,7 +26,7 @@
             </a>
         </li>
         <li>
-            <a href="/about/useragreement"
+            <a href="/about/termsofuse"
                th:class="${currentPage == 'useragreement'} ? 'menu-about-lnk active' : 'menu-about-lnk'">
                 Соглашение
             </a>
