update styles on about pages

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,7 +4,7 @@
 <body class="about-page flex-column">
 <header th:replace="fragments/header :: header"></header>
 <main class="container">
-    <div class="row justify-content-center" style="">
+    <div class="row justify-content-center">
         <div class="col-auto">
             <div th:replace="fragments/menu-about :: menu-about"></div>
         </div>
