--- a/src/main/resources/templates/privacy.html
+++ b/src/main/resources/templates/privacy.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html class="h-100" data-lt-installed="true" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="fragments/head :: head"></head>
-<body class="d-flex flex-column h-100" style="background: #f5f5f7;">
+<body class="about-page flex-column">
 <header th:replace="fragments/header :: header"></header>
 <main class="container">
-  <div class="row justify-content-center" style="">
+  <div class="row justify-content-center">
     <div class="col-auto">
       <div th:replace="fragments/menu-about :: menu-about"></div>
     </div>
