edit HEAD block - add META tags

--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html class="h-100" data-lt-installed="true"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:og="http://ogp.me/ns#">
 <head th:insert="fragments/head :: head">></head>
 <body class="news-page flex-column">
     <header th:replace="fragments/header :: header"></header>
