--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,15 +1,46 @@
 <head th:fragment="head">
-    <title th:text="${'Ozone News'}"/>
+
+    <title th:text="${'Ozero News'}"/>
     <!--<title th:text="${title}"/>-->
     <!--<title th:replace="${title}"/>-->
-    <!-- Required meta tags -->
+
+    <!-- HTML Meta Tags -->
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#7952b3">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
+    <meta name="author" content="Ozero Media Lab">
     <meta name="generator" content="">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Ozero News">
+    <meta itemprop="description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
+    <meta itemprop="image" content="/static/images/logo.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:site_name" content="Ozero News">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:type" content="website">
+    <!--<meta property="og:type" content="article" data-react-helmet="true">-->
+    <meta property="og:url" content="https://ozeronews.appspot.com">
+    <!--<meta property="og:url" content="https://novayagazeta.ru/articles/2021/06/23/ia-privil-nashei-vaktsinoi-mamu-ei-90-let" data-react-helmet="true">-->
+
+    <meta property="og:title" content="Ozero News">
+    <!--<meta property="og:title" content="«Я привил нашей вакциной маму, ей 90 лет» . Генеральный директор ФНЦ имени Чумакова Айдар Ишмухаметов отвечает на вопросы «Новой»" data-react-helmet="true">-->
+    <meta property="og:long_title" content="«Я привил нашей вакциной маму, ей 90 лет» " data-react-helmet="true">
+    <meta property="og:description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
+    <!--<meta property="og:description" content="Генеральный директор ФНЦ имени Чумакова Айдар Ишмухаметов отвечает на вопросы «Новой»" data-react-helmet="true">-->
+    <meta property="og:image" content="/static/images/logo.png">
+    <!--<meta property="og:image" content="https://novayagazeta.ru/static/previews/2021/06/23/ia-privil-nashei-vaktsinoi-mamu-ei-90-let.jpeg?v=25" data-react-helmet="true">-->
+    <meta property="og:image:width" content="300" data-react-helmet="true">
+    <meta property="og:image:height" content="300" data-react-helmet="true">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ozero News">
+    <meta name="twitter:description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
+    <meta name="twitter:image" content="/static/images/logo.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
