--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -42,11 +42,11 @@
                 <i class="fas fa-redo-alt fa-2x d-block"></i>
                 <span class="menu-footer-lbl">Обновить</span>
             </a>
-            <a th:href="@{/}" class="menu-footer-btn">
+            <a th:href="@{/news/news/all}" class="menu-footer-btn">
                 <i class="fas fa-home fa-2x d-block"></i>
                 <span class="menu-footer-lbl">Домой</span>
             </a>
-            <a th:href="@{/subscriptions}" class="menu-footer-btn">
+            <a th:href="@{/subscriptions/news/all}" class="menu-footer-btn">
                 <i class="fas fa-pen-square fa-2x d-block"></i>
                 <span class="menu-footer-lbl">Подписки</span>
             </a>
