--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -23,7 +23,7 @@
                 </div>
                 <div id="articles">
                     <!--
-                    <div th:each="article : ${articles}" class="card p-sm-2 card-article">
+                    <article th:each="article : ${articles}" class="card p-sm-2 card-article">
                         <div class="row g-0">
                             <div class="col me-1 me-sm-2 d-flex align-items-start flex-column">
                                 <div class="card-body p-0 mb-auto w-100 d-flex align-items-start flex-column">
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </article>
                     -->
                 </div>
 
