--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,6 +1,6 @@
 <head th:fragment="head">
 
-    <title th:text="${'Ozero News'}"/>
+    <title th:text="${head.siteName}"/>
     <!--<title th:text="${title}"/>-->
     <!--<title th:replace="${title}"/>-->
 
@@ -14,28 +14,28 @@
     <meta name="generator" content="">
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Ozero News">
-    <meta itemprop="description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
-    <meta itemprop="image" content="/static/images/logo.png">
+    <meta itemprop="name" th:content="${head.siteName}">
+    <meta itemprop="description" th:content="${head.description}">
+    <meta itemprop="image" th:content="${head.image}">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:site_name" content="Ozero News">
+    <meta property="og:site_name" th:content="${head.siteName}">
     <meta property="og:locale" content="ru_RU">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ozeronews.appspot.com">
-    <meta property="og:title" content="Ozero News">
+    <meta property="og:type" content="article">
+    <meta property="og:url" th:content="${head.url}">
+    <meta property="og:title" th:content="${head.title}">
     <!--<meta property="og:long_title" content="" data-react-helmet="true">-->
-    <meta property="og:description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
-    <meta property="og:image" content="/static/images/logo.png">
+    <meta property="og:description" th:content="${head.description}">
+    <meta property="og:image" th:content="${head.image}">
     <!--<meta property="og:image:width" content="300" data-react-helmet="true">-->
     <!--<meta property="og:image:height" content="300" data-react-helmet="true">-->
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Ozero News">
-    <meta name="twitter:url" content="https://ozeronews.appspot.com">
-    <meta name="twitter:description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
-    <meta name="twitter:image" content="/static/images/logo.png">
+    <meta name="twitter:title" th:content="${head.title}">
+    <meta name="twitter:url" th:content="${head.url}">
+    <meta name="twitter:description" th:content="${head.description}">
+    <meta name="twitter:image" th:content="${head.image}">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
