--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -7,8 +7,10 @@
     <!-- HTML Meta Tags -->
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html">
+    <meta http-equiv="refresh" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#7952b3">
+    <meta name="application-name" th:content="${head.siteName}">
     <meta name="description" content="Лента новостей в стране и мире от ведущих информационных агенств.">
     <meta name="author" content="Ozero Media Lab">
     <meta name="generator" content="">
